<resources>
    <string name="app_name">MyHealth</string>


    <string name="title_lifestyle">قيم صحتك</string>
    <string name="title_PA">الأنشطة الرياضية</string>
    <string name="title_Meal">الوجبات</string>
    <string name="title_Goal">الاهداف</string>
    <string name="title_Challenge">التحدي</string>

    <string-array name="questions_list">

        <item>What was your childhood nickname?</item>
        <item>What is the name of your favorite childhood friend?</item>
        <item>In what city or town did your mother and father meet?</item>
        <item>What is your favorite team?","What is your favorite movie?</item>
        <item>What was your favorite sport in high school?</item>
        <item>What was your favorite food as a child?</item>
        <item>What was the make and model of your first car?</item>
        <item>What was the last name of your third grade teacher?</item>
        <item>In what town was your first job?</item>
        <item>What was the name of the company where you had your first job?</item>
    </string-array>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_name"><u>الإسم : </u></string>
    <string name="profile_age"><u>العمر : </u></string>
    <string name="profile_gender"><u>الجنس : </u></string>
    <string name="profile_weight"><u>الوزن : </u></string>
    <string name="profile_tall"><u>الطول : </u></string>
    <string name="profile_hip_width"><u>محيط الخصر : </u></string>
    <string name="profile_heath_center"><u>المركز الصحي : </u></string>
    <string name="profile_check_health"><u>قيم صحتك : </u></string>
    <string name="profile_goals"><u>الآهداف : </u></string>
    <string name="profile_app_info">المديرية العامة للخدمات الصحية لمحافظة مسقط تعمل كمصدر للمعارف التقنية وكافة الأمور المتعلقة بالشئون والخدمات الصحية في محافظة مسقط، وهي تحت الإشراف المباشر من معالي الوزير الموقر وأصحاب السعادة وكلاء الوزارة للشئون الصحية والشئون الإدارية والمالية وشئون التخطيط، حيث تُقدم المديرية المشورة الفنية بشأن جميع المسائل الطبية ومسائل الصحة العامة لتنفيذ الخطط الصحية المختلفة، من أجل تنفيذ سياسات وبرامج وزارة الصحة بطريقة فعالة. وتقوم المديرية العامة للخدمات الصحية لمحافظة مسقط بإدارة كافة الخدمات الصحية في المحافظة المتعلقة بالرعاية الصحية الأولية وذلك بدعم من فريق طبي وإداري ذو كفاءة وخبرة عالية. كما تنقسم المديرية إلى دوائر عدة كالشئون الإدارية والمالية والتخطيط، والشؤون الصحية والتمريض والقبالة وخدمات والصيدلة والمخازن الطبية؛ ومن خلال توفر شبكة من الخدمات الصحية الداعمة لجميع المؤسسات الصحية يمكن للمديرة العامة تحقيق الأهداف المنشودة. ويبلغ عدد المؤسسات الصحية التابعة للمديرية العامة للخدمات الصحية لمحافظة مسقط 28 مركز صحي، 3 مجمعات صحية، ومستشفى واحد، و3 مراكز لفحص العمالة الوافدة، ومركز واحد لغسيل الكلى. ويتم تصنيف الخدمات الصحية المقدمة على شكل الرعاية الصحية الأولية والثانوية ومتخصصة عند الحاجة، وتلتزم المديرية بتقديم خدمات عالية الجودة لسكان محافظة مسقط.</string>


</resources>

