<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragments.ProfileFragment">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_img"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginTop="24dp"
            android:elevation="6dp"
            android:src="@drawable/pro"
            app:civ_border_color="@color/c1"
            app:civ_border_width="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingBottom="4dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/iv_profile_img"
            app:layout_constraintStart_toStartOf="@+id/iv_profile_img"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile_img" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/shape_outline_box"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_username">


            <TextView
                android:id="@+id/tv_health_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_health_center"
                app:layout_constraintEnd_toStartOf="@+id/tv_label_health_center"
                app:layout_constraintTop_toTopOf="@+id/tv_label_health_center" />

            <TextView
                android:id="@+id/tv_label_health_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/profile_heath_center"
                android:textColor="@color/c1"
                app:layout_constraintEnd_toEndOf="@+id/tv_label_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_weight" />

            <TextView
                android:id="@+id/tv_label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/profile_name"
                android:textColor="@color/c1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_name"
                app:layout_constraintEnd_toStartOf="@+id/tv_label_name"
                app:layout_constraintTop_toTopOf="@+id/tv_label_name"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_label_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/profile_age"
                android:textColor="@color/c1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_name"
                app:layout_constraintEnd_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toTopOf="@+id/tv_label_name"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_age"
                app:layout_constraintEnd_toStartOf="@+id/tv_label_age"
                app:layout_constraintTop_toTopOf="@+id/tv_label_age"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_label_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/profile_gender"
                android:textColor="@color/c1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_name"
                app:layout_constraintEnd_toStartOf="@+id/tv_age"
                app:layout_constraintTop_toTopOf="@+id/tv_label_name" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_gender"
                app:layout_constraintEnd_toStartOf="@+id/tv_label_gender"
                app:layout_constraintTop_toTopOf="@+id/tv_label_gender"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_label_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/profile_weight"
                android:textColor="@color/c1"
                app:layout_constraintEnd_toEndOf="@+id/tv_label_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_name" />

            <TextView
                android:id="@+id/tv_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_weight"
                app:layout_constraintEnd_toStartOf="@+id/tv_label_weight"
                app:layout_constraintTop_toTopOf="@+id/tv_label_weight"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tv_label_tall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/profile_tall"
                android:textColor="@color/c1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_weight"
                app:layout_constraintEnd_toStartOf="@+id/tv_weight"
                app:layout_constraintTop_toTopOf="@+id/tv_label_weight" />

            <TextView
                android:id="@+id/tv_tall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_tall"
                app:layout_constraintEnd_toStartOf="@+id/tv_label_tall"
                app:layout_constraintTop_toTopOf="@+id/tv_label_tall" />

            <TextView
                android:id="@+id/tv_label_hip_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/profile_hip_width"
                android:textColor="@color/c1"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_weight"
                app:layout_constraintEnd_toStartOf="@+id/tv_tall"
                app:layout_constraintTop_toTopOf="@+id/tv_label_weight" />

            <TextView
                android:id="@+id/tv_hip_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="@+id/tv_label_hip_width"
                app:layout_constraintEnd_toStartOf="@+id/tv_label_hip_width"
                app:layout_constraintTop_toTopOf="@+id/tv_label_hip_width" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/shape_outline_box"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_1">


            <TextView
                android:id="@+id/tv_label_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/profile_check_health"
                android:textColor="@color/c1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_label_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:text="نتيجة قيم صحتك"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_check" />

            <TextView
                android:id="@+id/tv_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="منخفض"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/tv_label_result"
                app:layout_constraintStart_toStartOf="@+id/tv_label_result"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_result" />

            <TextView
                android:id="@+id/tv_label_mass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="كتلة الجسم"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_label_result"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_check" />

            <TextView
                android:id="@+id/tv_mass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="23.6128"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/tv_label_mass"
                app:layout_constraintStart_toStartOf="@+id/tv_label_mass"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_mass" />

            <TextView
                android:id="@+id/tv_label_calories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="السعرات الحرارية"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tv_label_mass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_check" />

            <TextView
                android:id="@+id/tv_calories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="1535.5"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="@+id/tv_label_calories"
                app:layout_constraintStart_toStartOf="@+id/tv_label_calories"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_calories" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/shape_outline_box"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl2">


            <TextView
                android:id="@+id/tv_label_goals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/profile_goals"
                android:textColor="@color/c1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>